feat: colección Postman con tests, ajustes ENCRYPTION_KEY y probes Actuator
- Colección Postman con tests automatizados (pm.test), flujo completo y casos de error
- AesEncryptionService: trim y sanitización de ENCRYPTION_KEY, soporte 16/24/32 bytes
- Actuator: probes.enabled para /actuator/health/liveness y /actuator/health/readiness
- README: sección de colección Postman

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,6 +54,8 @@ management:
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true
   health:
     livenessstate:
       enabled: true
