--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,23 @@
 APP_API_KEY=your-api-key-here
 ENCRYPTION_KEY=base64-encoded-32-byte-key
 
-# Optional overrides (docker-compose provides DB and Mail for containerized runs)
+# Database (Supabase o local)
 # SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/farmatodo
 # SPRING_DATASOURCE_USERNAME=farmatodo
 # SPRING_DATASOURCE_PASSWORD=farmatodo_pwd
+
+# Mail - Resend (https://resend.com)
+# Crear API key en: Dashboard → API Keys
+SPRING_MAIL_HOST=smtp.resend.com
+SPRING_MAIL_PORT=465
+SPRING_MAIL_USERNAME=resend
+SPRING_MAIL_PASSWORD=re_tu_api_key_aqui
+SPRING_MAIL_SSL_ENABLE=true
+
+# Mail - Local (MailDev con Docker)
 # SPRING_MAIL_HOST=localhost
 # SPRING_MAIL_PORT=1025
+# SPRING_MAIL_USERNAME=
+# SPRING_MAIL_PASSWORD=
+
 # TOKEN_REJECT_PROBABILITY=0.0
