--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: ${PORT:8080}
+
 spring:
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/farmatodo}
@@ -8,6 +11,12 @@ spring:
     port: ${SPRING_MAIL_PORT:1025}
     username: ${SPRING_MAIL_USERNAME:}
     password: ${SPRING_MAIL_PASSWORD:}
+    properties:
+      mail:
+        smtp:
+          ssl:
+            enable: ${SPRING_MAIL_SSL_ENABLE:false}
+            trust: ${SPRING_MAIL_HOST:localhost}
   jpa:
     hibernate:
       ddl-auto: update
@@ -30,8 +39,6 @@ app:
     reject-probability: ${TOKEN_REJECT_PROBABILITY:0.0}
   product:
     min-stock-visible: ${PRODUCT_MIN_STOCK_VISIBLE:0}
-  payment:
-    retry-count: ${PAYMENT_RETRY_COUNT:3}
   rate-limit:
     requests-per-minute: ${RATE_LIMIT_REQUESTS_PER_MINUTE:60}
 
