--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ APP_API_KEY=your-api-key-here
 ENCRYPTION_KEY=base64-encoded-32-byte-key
 
 # Database (Supabase o local)
-# SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/farmatodo
-# SPRING_DATASOURCE_USERNAME=farmatodo
-# SPRING_DATASOURCE_PASSWORD=farmatodo_pwd
+SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/farmatodo
+SPRING_DATASOURCE_USERNAME=farmatodo
+SPRING_DATASOURCE_PASSWORD=farmatodo_pwd
 
 # Mail - Resend (https://resend.com)
 # Crear API key en: Dashboard → API Keys
@@ -14,11 +14,13 @@ SPRING_MAIL_PORT=465
 SPRING_MAIL_USERNAME=resend
 SPRING_MAIL_PASSWORD=re_tu_api_key_aqui
 SPRING_MAIL_SSL_ENABLE=true
+# Remitente. onboarding@resend.dev (solo envía a tu email) o notificaciones@tudominio.com si verificaste un dominio
+SPRING_MAIL_FROM=onboarding@resend.dev
 
 # Mail - Local (MailDev con Docker)
-# SPRING_MAIL_HOST=localhost
-# SPRING_MAIL_PORT=1025
-# SPRING_MAIL_USERNAME=
-# SPRING_MAIL_PASSWORD=
+SPRING_MAIL_HOST=localhost
+SPRING_MAIL_PORT=1025
+SPRING_MAIL_USERNAME=
+SPRING_MAIL_PASSWORD=
 
 # TOKEN_REJECT_PROBABILITY=0.0
